--- a/memberserver-test.properties
+++ b/memberserver-test.properties
@@ -18,6 +18,6 @@ server.port=7777
 #当前服务去注册中心注册的服务名称
 spring.application.name=memberService
 #注册中心地址
-eureka.client.service-url.defaultZone=http://192.168.31.117:1111/eureka/
+eureka.client.service-url.defaultZone=http://localhost:1111/eureka/
 #开启feign熔断
 feign.hystrix.enabled=true
